# CudaCmake

./: CMakeLists.txt  README.md
CMake/: CommonMacros.txt
Core/: CMakeLists.txt
Core/src/: main.cu
